renderd wrong so idk trying again

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="title" class="slide header">
       <h1>ਵਾਹਿਗੁਰੂਜੀਕਾਖਾਲਸਾਵਾਹਿਗੁਰੂਜੀਕੀਫਤੇ||</h1>
       <h2>Welcom to Camp Panth</h2>
-      <h3>Vaheguru<h3>
+      <h3>Vaheguroo<h3>
     </div>
 
     <div id="slide1" class="slide">
