--- a/index.html
+++ b/index.html
@@ -125,21 +125,15 @@
       <!-- cont inner end -->
     </div>
 
-    <a
-      href="https://dribbble.com/shots/2802024-Satellite-Website-Prototype"
-      target="_blank"
-      class="icon-link"
-    >
+    <a target="_blank" class="icon-link" id="ball">
       <img
+        alt="no icon"
         src="http://icons.iconarchive.com/icons/uiconstock/socialmedia/256/Dribbble-icon.png"
       />
     </a>
-    <a
-      href="https://twitter.com/NikolayTalanov"
-      target="_blank"
-      class="icon-link icon-link--twitter"
-    >
+    <a target="_blank" class="icon-link icon-link--twitter" id="bird">
       <img
+        alt="icon"
         src="https://cdn1.iconfinder.com/data/icons/logotypes/32/twitter-128.png"
       />
     </a>
