added some text

--- a/index.html
+++ b/index.html
@@ -17,10 +17,19 @@
             <div class="el__inner">
               <div class="el__bg"></div>
               <div class="el__preview-cont">
-                <h2 class="el__heading">Section 1</h2>
+                <h2 class="el__heading">Panth</h2>
               </div>
               <div class="el__content">
-                <div class="el__text">Whatever</div>
+                <div class="el__text">
+                  Mission:
+                  <h1>"Arm yourself with knowledge"</h1>
+                  <p class="paragraph">
+                    We believe the panth is in need of vidwan's. Our aim is too
+                    create those scholars through the means of santhiya and
+                    other gurmat achedmics. This camp environment aims to create
+                    a literacy culture amongst the sikh youth
+                  </p>
+                </div>
                 <div class="el__close-btn"></div>
               </div>
             </div>
