added logo stuff

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                   Mission:
                   <h1>"Arm yourself with knowledge"</h1>
                   <p class="paragraph">
-                    We believe the panth is in need of vidwan's. Our aim is too
+                    We believe the panth is in need of vidvan's. Our aim is too
                     create those scholars through the means of santhiya and
-                    other gurmat achedmics. This camp environment aims to create
+                    other gurmat academics. This camp environment aims to create
                     a literacy culture amongst the sikh youth
                   </p>
                 </div>
@@ -134,16 +134,30 @@
       <!-- cont inner end -->
     </div>
 
-    <a target="_blank" class="icon-link" id="ball">
+    <a
+      target="_blank"
+      class="icon-link"
+      id="ball"
+      href="https://soundcloud.com/13sevak"
+    >
       <img
+        class="logo"
         alt="no icon"
-        src="http://icons.iconarchive.com/icons/uiconstock/socialmedia/256/Dribbble-icon.png"
+        src="./images/logo.jpg"
+        style="width: 60px; height: 60px; border-radius: 50%"
       />
     </a>
-    <a target="_blank" class="icon-link icon-link--twitter" id="bird">
+    <a
+      href="https://www.youtube.com/user/supreet7188"
+      target="_blank"
+      class="icon-link icon-link--twitter"
+      id="bird"
+    >
       <img
-        alt="icon"
-        src="https://cdn1.iconfinder.com/data/icons/logotypes/32/twitter-128.png"
+        class="logo2"
+        alt="no icon"
+        src="./images/logo.jpg"
+        style="width: 60px; height: 60px; border-radius: 50%"
       />
     </a>
   </body>
