--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <article class="box">
           <header>
             <h2>Vidiya Sagar</h2>
-            <p>Through Vidiya We cna better our actions</p>
+            <p>Through Vidiya We can better our actions</p>
           </header>
           <div class="content">
             <p>
@@ -157,7 +157,10 @@
       <div class="inner">
         <h2>Contact Me</h2>
 
-        <form action="#" method="post">
+        <form
+          action="https://formsubmit.co/giansingh4710@gmail.com"
+          method="POST"
+        >
           <div class="field half first">
             <label for="name">Name</label>
             <input name="name" id="name" type="text" placeholder="Name" />
