--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <h2>Contact Me</h2>
 
         <form
-          action="https://formsubmit.co/giansingh4710@gmail.com"
+          action="https://formsubmit.co/6d06c8de99921680f73e1d6021d8648b"
           method="POST"
         >
           <div class="field half first">
