--- a/index.html
+++ b/index.html
@@ -15,9 +15,25 @@
     <!-- Header -->
     <header id="header">
       <div class="logo">
-        <a href="index.html"
-          >Camp Panth <span>for the Panth by the Panth</span></a
-        >
+        <!-- <a href="index.html"
+          >
+          </a
+          > -->
+        <a target="_blank" href="https://soundcloud.com/13sevak">
+          Camp Panth <span>for the Panth by the Panth</span>
+          <img
+            class="logo"
+            alt="no icon"
+            src="./images/13logo.jpg"
+            style="
+              left: -20px;
+              top: -15px;
+              width: 30px;
+              height: 30px;
+              border-radius: 50%;
+            "
+          />
+        </a>
       </div>
       <a href="#menu"><span>Menu</span></a>
     </header>
@@ -26,8 +42,8 @@
     <nav id="menu">
       <ul class="links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="generic.html">Generic</a></li>
-        <li><a href="elements.html">Elements</a></li>
+        <li><a href="aboutUs.html">About Us</a></li>
+        <li><a href="other.html">More Information</a></li>
       </ul>
     </nav>
 
@@ -48,7 +64,7 @@
     </section>
 
     <!-- One -->
-    <section id="one" class="wrapper post bg-img" data-bg="banner2.jpg">
+    <section id="one" class="wrapper post bg-img" data-bg="banner1.jpg">
       <div class="inner">
         <article class="box">
           <header>
@@ -62,62 +78,16 @@
             achedmics. This camp environment aims to create a literacy culture
             amongst the sikh youth.
           </div>
-          <footer>
-            <a href="generic.html" class="button alt">Learn More</a>
-          </footer>
+          <!-- <footer>
+            <a href="aboutUs.html" class="button alt">Learn More</a>
+          </footer> -->
         </article>
       </div>
       <a href="#two" class="more">Learn More</a>
     </section>
 
     <!-- Two -->
-    <section id="two" class="wrapper post bg-img" data-bg="banner5.jpg">
-      <div class="inner">
-        <article class="box">
-          <header>
-            <h2>Keertan/Katha</h2>
-            <p>Keertan/Katha is our Love and there is no price of Love</p>
-          </header>
-          <div class="content">
-            <h3>The lifeline of every vadiayarti relies on Katha and Kirtan</h3>
-            The day of this camp will begin and end with Katha and Kirtan.
-            Amritvela Asa di vaar, Hukunmama katha, and Nitnem In the evening ,
-            Sri Nanak Parkash Katha, Rehress, Aarti Aarta and Kirtan
-          </div>
-          <footer>
-            <a href="generic.html" class="button alt">Learn More</a>
-          </footer>
-        </article>
-      </div>
-      <a href="#three" class="more">Learn More</a>
-    </section>
-
-    <!-- Three -->
-    <section id="three" class="wrapper post bg-img" data-bg="banner4.jpg">
-      <div class="inner">
-        <article class="box">
-          <header>
-            <h2>Gurbani Writing</h2>
-            <p>The blessings recived through Gurbani Writing is endless</p>
-          </header>
-          <div class="content">
-            <p>
-              A important core part of this camp will be writing Gurbani.
-              Vidyaarthis will create their own gutka/pothi sahib with their own
-              hands. This method of bhagati aims to increase the spiritual
-              connection of the Jaguaasu with Gurbani.
-            </p>
-          </div>
-          <footer>
-            <a href="generic.html" class="button alt">Learn More</a>
-          </footer>
-        </article>
-      </div>
-      <a href="#four" class="more">Learn More</a>
-    </section>
-
-    <!-- Four -->
-    <section id="four" class="wrapper post bg-img" data-bg="banner3.jpg">
+    <section id="two" class="wrapper post bg-img" data-bg="banner2.jpg">
       <div class="inner">
         <article class="box">
           <header>
@@ -145,9 +115,97 @@
               understand Gurbani.
             </p>
           </div>
-          <footer>
-            <a href="generic.html" class="button alt">Learn More</a>
-          </footer>
+          <!-- <footer>
+            <a href="aboutUs.html" class="button alt">Learn More</a>
+          </footer> -->
+        </article>
+      </div>
+      <a href="#three" class="more">Learn More</a>
+    </section>
+
+    <!-- Three -->
+    <section id="three" class="wrapper post bg-img" data-bg="banner3.jpg">
+      <div class="inner">
+        <article class="box">
+          <header>
+            <h2>Activities</h2>
+            <p>Work hard , play hard is a moto we live by</p>
+          </header>
+          <div class="content">
+            <p>
+              Alongside keeping our mind fit, being physcially fit is aslo
+              essential. Learning starts from the body before it reaches the
+              mind. Many exciting workshops are planned for the vidyaarthis such
+              as 
+              <dl>
+                <dt>The art of Dastaar</dt>
+                <dt>
+                  Gatra Essentials Course 
+                </dt>
+                <dt>
+                  Hiking
+                </dt>
+                <dt>
+                  Volleyball 
+                </dt>
+                <dt>
+                  Gatka 
+                </dt>
+                <dt>
+                  Martial Arts
+                </dt>
+              </dl>
+            </p>
+          </div>
+          <!-- <footer>
+            <a href="aboutUs.html" class="button alt">Learn More</a>
+          </footer> -->
+        </article>
+      </div>
+      <a href="#four" class="more">Learn More</a>
+    </section>
+
+    <!-- Four -->
+    <section id="four" class="wrapper post bg-img" data-bg="banner4.jpg">
+      <div class="inner">
+        <article class="box">
+          <header>
+            <h2>Gurbani Writing</h2>
+            <p>The blessings recived through Gurbani Writing is endless</p>
+          </header>
+          <div class="content">
+            <p>
+              A important core part of this camp will be writing Gurbani.
+              Vidyaarthis will create their own gutka/pothi sahib with their own
+              hands. This method of bhagati aims to increase the spiritual
+              connection of the Jaguaasu with Gurbani.
+            </p>
+          </div>
+          <!-- <footer>
+            <a href="aboutUs.html" class="button alt">Learn More</a>
+          </footer> -->
+        </article>
+      </div>
+      <a href="#five" class="more">Learn More</a>
+    </section>
+
+    <!-- Five -->
+    <section id="five" class="wrapper post bg-img" data-bg="banner5.jpg">
+      <div class="inner">
+        <article class="box">
+          <header>
+            <h2>Keertan/Katha</h2>
+            <p>Keertan/Katha is our Love and there is no price of Love</p>
+          </header>
+          <div class="content">
+            <h3>The lifeline of every vadiayarti relies on Katha and Kirtan</h3>
+            The day of this camp will begin and end with Katha and Kirtan.
+            Amritvela Asa di vaar, Hukunmama katha, and Nitnem In the evening ,
+            Sri Nanak Parkash Katha, Rehress, Aarti Aarta and Kirtan
+          </div>
+          <!-- <footer>
+            <a href="aboutUs.html" class="button alt">Learn More</a>
+          </footer> -->
         </article>
       </div>
     </section>
@@ -155,7 +213,7 @@
     <!-- Footer -->
     <footer id="footer">
       <div class="inner">
-        <h2>Contact Me</h2>
+        <h2>Contact Us</h2>
 
         <form
           action="https://formsubmit.co/6d06c8de99921680f73e1d6021d8648b"
@@ -188,31 +246,31 @@
         <ul class="icons">
           <li>
             <a
-              href="https://www.sikhitothemax.org/shabad?id=924"
-              class="icon round fa-twitter"
-              ><span class="label">Twitter</span></a
+              href="https://www.youtube.com/user/supreet7188"
+              class="icon round fa-youtube"
+              ><span class="label">YouTube</span></a
             >
           </li>
           <li>
             <a
-              href="https://www.sikhitothemax.org/shabad?id=924"
-              class="icon round fa-facebook"
+              href="https://soundcloud.com/13sevak"
+              class="icon round fa-soundcloud"
               ><span class="label">Facebook</span></a
             >
           </li>
           <li>
             <a
-              href="https://www.sikhitothemax.org/shabad?id=924"
-              class="icon round fa-instagram"
-              ><span class="label">Instagram</span></a
+              href="https://github.com/Giansingh4710/campPanth"
+              class="icon round fa-github"
+              ><span class="label">Github</span></a
             >
           </li>
         </ul>
 
-        <div class="copyright">
+        <!-- <div class="copyright">
           &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>.
           Images: <a href="https://unsplash.com">Unsplash</a>.
-        </div>
+        </div> -->
       </div>
     </footer>
 
