--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             achedmics. This camp environment aims to create a literacy culture
             amongst the sikh youth.
           </div>
-          <!-- <footer>
-            <a href="aboutUs.html" class="button alt">Learn More</a>
-          </footer> -->
+          <footer>
+            <a href="./PDF's/Jpg/Camp Panth Schedule.jpg" class="button alt">View Schedule</a>
+          </footer>
         </article>
       </div>
       <a href="#two" class="more">Learn More</a>
