--- a/other.html
+++ b/other.html
@@ -41,9 +41,7 @@
         <dl>
           <dt>
             <p>
-              <a href="./PDF's/Camp Panth Schedule.pdf">
-                Download Schedule PDF
-              </a>
+              <a href="./PDF's/Camp Panth Schedule.pdf"> Schedule PDF </a>
             </p>
             <img
               alt="Schedule"
@@ -55,7 +53,7 @@
           <dt>
             <p>
               <a href="./PDF's/Camper Essential List.pdf">
-                Download Essentials List PDF
+                Essentials List PDF
               </a>
             </p>
             <img
@@ -67,9 +65,7 @@
           </dt>
           <dt>
             <p>
-              <a href="./PDF's/Camp Panth Class List.pdf">
-                Download Class List PDF
-              </a>
+              <a href="./PDF's/Camp Panth Class List.pdf"> Class List PDF </a>
             </p>
             <img
               alt="Essential Lis"
@@ -80,7 +76,7 @@
           </dt>
           <dt>
             <p>
-              <a href="./PDF's/Seva Schedule.pdf"> Download Sewa List PDF </a>
+              <a href="./PDF's/Seva Schedule.pdf"> Sewa List PDF </a>
             </p>
             <img
               alt="Sewa List"
