added sign up in nav

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -26,6 +26,13 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutUs.html">About Us</a></li>
         <li><a href="other.html">More Information</a></li>
+        <li>
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSdRTkhdVJumBlep-TusGBx2-x1PuRKyumHSId9xjhHSFruRbQ/viewform"
+          >
+            Sign Up
+          </a>
+        </li>
       </ul>
     </nav>
 
