--- a/index.html
+++ b/index.html
@@ -15,22 +15,20 @@
     <!-- Header -->
     <header id="header">
       <div class="logo">
-        <!-- <a href="index.html"
-          >
-          </a
-          > -->
-        <a target="_blank" href="https://soundcloud.com/13sevak">
+        <a id="topHeader" target="_blank" href="https://soundcloud.com/13sevak">
           Camp Panth <span>for the Panth by the Panth</span>
           <img
             class="logo"
             alt="no icon"
             src="./images/13logo.jpg"
             style="
-              left: -20px;
-              top: -15px;
+              left: -10px;
+              top: 10px;
               width: 30px;
               height: 30px;
               border-radius: 50%;
+              /* margin: 20px; */
+              /* padding: 20px; */
             "
           />
         </a>
@@ -44,6 +42,11 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutUs.html">About Us</a></li>
         <li><a href="other.html">More Information</a></li>
+        <li>            
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdRTkhdVJumBlep-TusGBx2-x1PuRKyumHSId9xjhHSFruRbQ/viewform">
+          Sign Up  
+          </a>
+        </li>
       </ul>
     </nav>
 
@@ -57,7 +60,7 @@
       <div class="inner">
         <header>
           <h1>Welome to Camp Panth</h1>
-          <h4>a project by 13 Sewak</h4>
+          <h4>a project by Everythings13</h4>
         </header>
       </div>
       <a href="#one" class="more">Learn More</a>
@@ -79,7 +82,7 @@
             amongst the sikh youth.
           </div>
           <footer>
-            <a href="./PDF's/Jpg/Camp Panth Schedule.jpg" class="button alt">View Schedule</a>
+            <!-- <a href="./PDF's/Jpg/Camp Panth Schedule.jpg" class="button alt">View Schedule</a> -->
           </footer>
         </article>
       </div>
@@ -203,76 +206,14 @@
             Amritvela Asa di vaar, Hukunmama katha, and Nitnem In the evening ,
             Sri Nanak Parkash Katha, Rehress, Aarti Aarta and Kirtan
           </div>
-          <!-- <footer>
-            <a href="aboutUs.html" class="button alt">Learn More</a>
-          </footer> -->
+           <footer>
+            <a target="blank" class="button alt" href="https://docs.google.com/forms/d/e/1FAIpQLSdRTkhdVJumBlep-TusGBx2-x1PuRKyumHSId9xjhHSFruRbQ/viewform">
+            Click here to sign up
+            </a>            
+          </footer> 
         </article>
       </div>
     </section>
-
-    <!-- Footer -->
-    <footer id="footer">
-      <div class="inner">
-        <h2>Contact Us</h2>
-
-        <form
-          action="https://formsubmit.co/6d06c8de99921680f73e1d6021d8648b"
-          method="POST"
-        >
-          <div class="field half first">
-            <label for="name">Name</label>
-            <input name="name" id="name" type="text" placeholder="Name" />
-          </div>
-          <div class="field half">
-            <label for="email">Email</label>
-            <input name="email" id="email" type="email" placeholder="Email" />
-          </div>
-          <div class="field">
-            <label for="message">Message</label>
-            <textarea
-              name="message"
-              id="message"
-              rows="6"
-              placeholder="Message"
-            ></textarea>
-          </div>
-          <ul class="actions">
-            <li>
-              <input value="Send Message" class="button alt" type="submit" />
-            </li>
-          </ul>
-        </form>
-
-        <ul class="icons">
-          <li>
-            <a
-              href="https://www.youtube.com/user/supreet7188"
-              class="icon round fa-youtube"
-              ><span class="label">YouTube</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://soundcloud.com/13sevak"
-              class="icon round fa-soundcloud"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://github.com/Giansingh4710/campPanth"
-              class="icon round fa-github"
-              ><span class="label">Github</span></a
-            >
-          </li>
-        </ul>
-
-        <!-- <div class="copyright">
-          &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>.
-          Images: <a href="https://unsplash.com">Unsplash</a>.
-        </div> -->
-      </div>
-    </footer>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
