--- a/other.html
+++ b/other.html
@@ -28,6 +28,13 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutUs.html">About Us</a></li>
         <li><a href="other.html">More Information</a></li>
+        <li>
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSdRTkhdVJumBlep-TusGBx2-x1PuRKyumHSId9xjhHSFruRbQ/viewform"
+          >
+            Sign Up
+          </a>
+        </li>
       </ul>
     </nav>
 
@@ -41,18 +48,7 @@
         <dl>
           <dt>
             <p>
-              <a href="./PDF's/Camp Panth Schedule.pdf"> Schedule PDF </a>
-            </p>
-            <img
-              alt="Schedule"
-              src="./PDF's/Jpg/Camp Panth Schedule.jpg"
-              width="400"
-              height="600"
-            />
-          </dt>
-          <dt>
-            <p>
-              <a href="./PDF's/Camper Essential List.pdf">
+              <a target="blank" href="./PDF's/Camper Essential List.pdf">
                 Essentials List PDF
               </a>
             </p>
@@ -74,85 +70,9 @@
               height="600"
             />
           </dt>
-          <dt>
-            <p>
-              <a href="./PDF's/Seva Schedule.pdf"> Sewa List PDF </a>
-            </p>
-            <img
-              alt="Sewa List"
-              src="./PDF's/Jpg/Seva Schedule.jpg"
-              width="700"
-              height="600"
-            />
-          </dt>
         </dl>
       </div>
     </div>
-
-    <!-- Footer -->
-    <!-- Footer -->
-    <footer id="footer">
-      <div class="inner">
-        <h2>Contact Us</h2>
-
-        <form
-          action="https://formsubmit.co/6d06c8de99921680f73e1d6021d8648b"
-          method="POST"
-        >
-          <div class="field half first">
-            <label for="name">Name</label>
-            <input name="name" id="name" type="text" placeholder="Name" />
-          </div>
-          <div class="field half">
-            <label for="email">Email</label>
-            <input name="email" id="email" type="email" placeholder="Email" />
-          </div>
-          <div class="field">
-            <label for="message">Message</label>
-            <textarea
-              name="message"
-              id="message"
-              rows="6"
-              placeholder="Message"
-            ></textarea>
-          </div>
-          <ul class="actions">
-            <li>
-              <input value="Send Message" class="button alt" type="submit" />
-            </li>
-          </ul>
-        </form>
-
-        <ul class="icons">
-          <li>
-            <a
-              href="https://www.youtube.com/user/supreet7188"
-              class="icon round fa-youtube"
-              ><span class="label">YouTube</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://soundcloud.com/13sevak"
-              class="icon round fa-soundcloud"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://github.com/Giansingh4710/campPanth"
-              class="icon round fa-github"
-              ><span class="label">Github</span></a
-            >
-          </li>
-        </ul>
-
-        <!-- <div class="copyright">
-            &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>.
-            Images: <a href="https://unsplash.com">Unsplash</a>.
-          </div> -->
-      </div>
-    </footer>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
