--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <!-- Header -->
     <header id="header">
       <div class="logo">
-        <a id="topHeader" target="_blank" href="https://soundcloud.com/13sevak">
+        <a id="topHeader">
           Camp Panth <span>for the Panth by the Panth</span>
-          <img
+          <a
+          target="_blank" href="https://soundcloud.com/13sevak"
+          >
+            <img
             class="logo"
             alt="no icon"
             src="./images/13logo.jpg"
@@ -27,10 +30,9 @@
               width: 30px;
               height: 30px;
               border-radius: 50%;
-              /* margin: 20px; */
-              /* padding: 20px; */
-            "
+              "
           />
+        </a>
         </a>
       </div>
       <a href="#menu"><span>Menu</span></a>
